--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
 
         <a-entity gps-entity-place="latitude: 44.496470; longitude: 11.320180;" gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" animation-mixer scale="0.15 0.15 0.15"/>
+
+        <!-- ***** Replace the lat and long #'s using https://www.latlong.net/' *****-->
         <a-camera gps-camera rotation-reader></a-camera>
 	</a-scene>
 </body>
